--- a/cloudStudy/pom.xml
+++ b/cloudStudy/pom.xml
@@ -107,6 +107,18 @@
     </dependencies>
 
   </dependencyManagement>
-
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>2.4.1</version>
+        <configuration>
+          <fork>true</fork>
+          <addResources>true</addResources>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
