--- a/cloudStudy/cloud-consumer-order80/pom.xml
+++ b/cloudStudy/cloud-consumer-order80/pom.xml
@@ -11,6 +11,11 @@
 
     <artifactId>cloud-consumer-order80</artifactId>
     <dependencies>
+        <!--eureka-client-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.xx.springcloud</groupId>
             <artifactId>cloud-api-commons</artifactId>
