--- a/cloudStudy/cloud-gateway-gateway9527/src/main/resources/application.yml
+++ b/cloudStudy/cloud-gateway-gateway9527/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
             - Path=/payment/lb/**      #断言，路径相匹配进行路由
             #- After=2022-06-07T12:12:12.574+08:00[Asia/Shanghai]
             #- Cookie=username,xxww
-            - Header=X-Request-Id, \d+ #请求头有X-Request-Id属性并且值为整数的正则表达式
+            #- Header=X-Request-Id, \d+ #请求头有X-Request-Id属性并且值为整数的正则表达式
 
 eureka:
   instance:
