--- a/cloudStudy/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloudStudy/cloud-consumer-order80/src/main/resources/application.yml
@@ -4,6 +4,12 @@ server:
 spring:
   application:
     name: cloud-order-service
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      #采样率值介于0到1之间，1表示全部采样
+      probability: 1
 
 eureka:
   client:
@@ -12,8 +18,8 @@ eureka:
     #是否从EurekaServer抓取已有的注册信息，默认为true。单节点无所谓，集群必须是true才能配合ribbon使用负载均衡
     fetch-registry: true
     service-url:
-      #defaultZone: http://localhost:7001/eureka
-      defaultZone: http://eureka7001.com:7001/eureka, http://eureka7002.com:7002/eureka #集群版
+      defaultZone: http://localhost:7001/eureka
+      #defaultZone: http://eureka7001.com:7001/eureka, http://eureka7002.com:7002/eureka #集群版
   instance:
     instance-id: order80
     prefer-ip-address: true     #访问路径可以显示Ip地址
