--- a/cloudStudy/seata-order-service2001/src/main/resources/registry.conf
+++ b/cloudStudy/seata-order-service2001/src/main/resources/registry.conf
@@ -1,6 +1,6 @@
 registry {
   # file 、nacos 、eureka、redis、zk、consul、etcd3、sofa
-  type = "、nacos"
+  type = "nacos"
 
   nacos {
     serverAddr = "localhost:8848"
