--- a/cloudStudy/seata-storage-service2002/src/main/resources/file.conf
+++ b/cloudStudy/seata-storage-service2002/src/main/resources/file.conf
@@ -28,7 +28,7 @@ transport {
 }
 service {
   #vgroup->rgroup
-  vgroup_mapping.my_test_tx_group = "fsp_tx_group"
+  vgroup_mapping.fsp_tx_group = "default"
   #only support single node
   default.grouplist = "127.0.0.1:8091"
   #degrade current not support
